Replace "echo -en" with "printf" in autoconf script
Fixes summary output on FreeBSD.

--- a/configure.ac
+++ b/configure.ac
@@ -4597,6 +4597,6 @@ if test x$WARN_ABOUT_ARM_NEON_ASM_MIT = xyes; then
     SUMMARY="${SUMMARY}\n    --disable-arm-neon\n"
 fi
 
-AC_CONFIG_COMMANDS([summary], [echo -en "$SUMMARY"], [SUMMARY="$SUMMARY"])
+AC_CONFIG_COMMANDS([summary], [printf "$SUMMARY"], [SUMMARY="$SUMMARY"])
 
 AC_OUTPUT
