--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Makefile
 Makefile.rules
 sdl2-config
 sdl2-config.cmake
+sdl2-config-version.cmake
 sdl2.pc
 SDL2.spec
 build
@@ -108,6 +109,7 @@ test/testdraw2
 test/testdrawchessboard
 test/testdropfile
 test/testerror
+test/testevdev
 test/testfile
 test/testfilesystem
 test/testgamecontroller
@@ -124,6 +126,7 @@ test/testintersections
 test/testjoystick
 test/testkeys
 test/testloadso
+test/testlocale
 test/testlock
 test/testmessage
 test/testmultiaudio
@@ -147,6 +150,7 @@ test/testspriteminimal
 test/teststreaming
 test/testthread
 test/testtimer
+test/testurl
 test/testver
 test/testviewport
 test/testvulkan
