--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,7 +360,7 @@ set_option(JACK                "Support the JACK audio API" ${UNIX_SYS})
 dep_option(JACK_SHARED         "Dynamically load JACK audio support" ON "JACK" OFF)
 set_option(ESD                 "Support the Enlightened Sound Daemon" ${UNIX_SYS})
 dep_option(ESD_SHARED          "Dynamically load ESD audio support" ON "ESD" OFF)
-set_option(PIPEWIRE            "Use Pipewire" ${UNIX_SYS})
+set_option(PIPEWIRE            "Use Pipewire audio" ${UNIX_SYS})
 dep_option(PIPEWIRE_SHARED     "Dynamically load Pipewire support" ON "PIPEWIRE" OFF)
 set_option(PULSEAUDIO          "Use PulseAudio" ${UNIX_SYS})
 dep_option(PULSEAUDIO_SHARED   "Dynamically load PulseAudio support" ON "PULSEAUDIO" OFF)
