CI: add 'libdecor' dependency from upstream

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,14 @@ jobs:
           libxxf86vm-dev \
           libdrm-dev \
           libgbm-dev\
-          libpulse-dev
+          libpulse-dev \
+          libpango1.0-dev
+        sudo apt install meson
+        git clone --depth 1 https://gitlab.gnome.org/jadahl/libdecor.git --branch 0.1.0
+        cd libdecor
+        meson build --buildtype release -Ddemo=false -Ddbus=disabled
+        ninja -C build
+        sudo meson install -C build
     - uses: actions/checkout@v2
     - name: Configure CMake
       run: cmake -B build ${{ matrix.platform.flags }}
