[KMSDRM] KMSDRM backend now loads it's own GL-related libs because MESA gives all EGL/GL/GLES functions entrypoints from a single shared object (libEGL.so).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1190,6 +1190,7 @@ elseif(UNIX AND NOT APPLE AND NOT ANDROID AND NOT RISCOS)
     CheckRPI()
     CheckX11()
     CheckDirectFB()
+    CheckOpenGLKMSDRM()
     CheckOpenGLX11()
     CheckOpenGLESX11()
     CheckWayland()
