cmake: Require CMake 3.16+ on APPLE, Fix for Xcode
Support CMake build with Xcode generator with:

- Require CMake 3.16+ on APPLE to use OBJC language
- enable_language(OBJC) and don't override them to C
- Don't use find_library for frameworks as official
  cmake-toolchains(7) sugguests
- Include `CheckOBJCSourceCompiles` for Apple platforms
- Add a semicolon to feed correct source to `check_objc_source_compiles`
- Add include path to khronos headers to ObjC sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,12 @@ if(WINDOWS_STORE)
   )
 endif()
 
+if(APPLE)
+  cmake_minimum_required(VERSION 3.16) # For OBJC language
+  enable_language(OBJC)
+  include(CheckOBJCSourceCompiles)
+endif()
+
 # !!! FIXME: this should probably do "MACOSX_RPATH ON" as a target property
 # !!! FIXME:  for the SDL2 shared library (so you get an
 # !!! FIXME:  install_name ("soname") of "@rpath/libSDL-whatever.dylib"
@@ -1693,8 +1699,6 @@ elseif(APPLE)
   if(SDL_FILE)
     file(GLOB EXTRA_SOURCES ${SDL2_SOURCE_DIR}/src/file/cocoa/*.m)
     set(SOURCE_FILES ${EXTRA_SOURCES} ${SOURCE_FILES})
-    # !!! FIXME: modern CMake doesn't need "LANGUAGE C" for Objective-C.
-    set_source_files_properties(${EXTRA_SOURCES} PROPERTIES LANGUAGE C)
     set(HAVE_SDL_FILE TRUE)
     # !!! FIXME: why is COREVIDEO inside this if() block?
     set(SDL_FRAMEWORK_COREVIDEO 1)
@@ -1714,8 +1718,6 @@ elseif(APPLE)
   if(SDL_AUDIO)
     set(SDL_AUDIO_DRIVER_COREAUDIO 1)
     file(GLOB AUDIO_SOURCES ${SDL2_SOURCE_DIR}/src/audio/coreaudio/*.m)
-    # !!! FIXME: modern CMake doesn't need "LANGUAGE C" for Objective-C.
-    set_source_files_properties(${AUDIO_SOURCES} PROPERTIES LANGUAGE C)
     set(SOURCE_FILES ${SOURCE_FILES} ${AUDIO_SOURCES})
     set(HAVE_SDL_AUDIO TRUE)
     set(SDL_FRAMEWORK_COREAUDIO 1)
@@ -1738,6 +1740,7 @@ elseif(APPLE)
         set(SDL_FRAMEWORK_COREMOTION 1)
       endif()
       set(SDL_FRAMEWORK_GAMECONTROLLER 1)
+      set(SDL_FRAMEWORK_COREHAPTICS 1)
       set(HAVE_SDL_SENSORS 1)
     else()
       file(GLOB JOYSTICK_SOURCES ${SDL2_SOURCE_DIR}/src/joystick/darwin/*.c ${SDL2_SOURCE_DIR}/src/joystick/iphoneos/*.m)
@@ -1796,8 +1799,6 @@ elseif(APPLE)
   if(SDL_FILESYSTEM)
     set(SDL_FILESYSTEM_COCOA 1)
     file(GLOB FILESYSTEM_SOURCES ${SDL2_SOURCE_DIR}/src/filesystem/cocoa/*.m)
-    # !!! FIXME: modern CMake doesn't need "LANGUAGE C" for Objective-C.
-    set_source_files_properties(${FILESYSTEM_SOURCES} PROPERTIES LANGUAGE C)
     set(SOURCE_FILES ${SOURCE_FILES} ${FILESYSTEM_SOURCES})
     set(HAVE_SDL_FILESYSTEM TRUE)
   endif()
@@ -1811,7 +1812,6 @@ elseif(APPLE)
     endif()
   endif()
 
-  # iOS hack needed - http://code.google.com/p/ios-cmake/ ?
   if(SDL_VIDEO)
     if (IOS OR TVOS)
       set(SDL_VIDEO_DRIVER_UIKIT 1)
@@ -1838,6 +1838,7 @@ elseif(APPLE)
         set(SDL_VIDEO_OPENGL_ES 1)
         set(SDL_VIDEO_RENDER_OGL_ES 1)
       else()
+        set(CMAKE_OBJC_FLAGS "${CMAKE_OBJC_FLAGS} -idirafter \"${SDL2_SOURCE_DIR}/src/video/khronos\"")
         set(SDL_VIDEO_OPENGL_EGL 1)
       endif()
       set(SDL_VIDEO_OPENGL_ES2 1)
@@ -1846,9 +1847,7 @@ elseif(APPLE)
     endif()
 
     if(VIDEO_VULKAN OR VIDEO_METAL OR RENDER_METAL)
-      set(ORIG_CMAKE_REQUIRED_FLAGS ${CMAKE_REQUIRED_FLAGS})
-      set(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -ObjC")
-      check_c_source_compiles("
+      check_objc_source_compiles("
         #include <AvailabilityMacros.h>
         #import <Metal/Metal.h>
         #import <QuartzCore/CAMetalLayer.h>
@@ -1858,10 +1857,9 @@ elseif(APPLE)
         #endif
         int main()
         {
-            return 0;
+            return 0\;
         }
         " HAVE_FRAMEWORK_METAL)
-      set(CMAKE_REQUIRED_FLAGS ${ORIG_CMAKE_REQUIRED_FLAGS})
       if(HAVE_FRAMEWORK_METAL)
         set(SDL_FRAMEWORK_METAL 1)
         set(SDL_FRAMEWORK_QUARTZCORE 1)
@@ -1887,80 +1885,66 @@ elseif(APPLE)
 
   # Actually load the frameworks at the end so we don't duplicate include.
   if(SDL_FRAMEWORK_COREVIDEO)
-    find_library(COREVIDEO CoreVideo)
-    list(APPEND EXTRA_LIBS ${COREVIDEO})
+    list(APPEND EXTRA_LIBS "-framework CoreVideo")
   endif()
   if(SDL_FRAMEWORK_COCOA)
-    find_library(COCOA_LIBRARY Cocoa)
-    list(APPEND EXTRA_LIBS ${COCOA_LIBRARY})
+    list(APPEND EXTRA_LIBS "-framework Cocoa")
   endif()
   if(SDL_FRAMEWORK_IOKIT)
-    find_library(IOKIT IOKit)
-    list(APPEND EXTRA_LIBS ${IOKIT})
+    list(APPEND EXTRA_LIBS "-framework IOKit")
   endif()
   if(SDL_FRAMEWORK_FF)
-    find_library(FORCEFEEDBACK ForceFeedback)
-    list(APPEND EXTRA_LIBS ${FORCEFEEDBACK})
+    list(APPEND EXTRA_LIBS "-framework ForceFeedback")
   endif()
   if(SDL_FRAMEWORK_CARBON)
-    find_library(CARBON_LIBRARY Carbon)
-    list(APPEND EXTRA_LIBS ${CARBON_LIBRARY})
+    list(APPEND EXTRA_LIBS "-framework Carbon")
   endif()
   if(SDL_FRAMEWORK_COREAUDIO)
-    find_library(COREAUDIO CoreAudio)
-    list(APPEND EXTRA_LIBS ${COREAUDIO})
+    list(APPEND EXTRA_LIBS "-framework CoreAudio")
   endif()
   if(SDL_FRAMEWORK_AUDIOTOOLBOX)
-    find_library(AUDIOTOOLBOX AudioToolbox)
-    list(APPEND EXTRA_LIBS ${AUDIOTOOLBOX})
+    list(APPEND EXTRA_LIBS "-framework AudioToolbox")
   endif()
   if(SDL_FRAMEWORK_AVFOUNDATION)
-    find_library(AVFOUNDATION AVFoundation)
-    list(APPEND EXTRA_LIBS ${AVFOUNDATION})
+    list(APPEND EXTRA_LIBS "-framework AVFoundation")
   endif()
   if(SDL_FRAMEWORK_COREBLUETOOTH)
-    find_library(COREBLUETOOTH CoreBluetooth)
-    list(APPEND EXTRA_LIBS ${COREBLUETOOTH})
+    list(APPEND EXTRA_LIBS "-framework CoreBluetooth")
   endif()
   if(SDL_FRAMEWORK_COREGRAPHICS)
-    find_library(COREGRAPHICS CoreGraphics)
-    list(APPEND EXTRA_LIBS ${COREGRAPHICS})
+    list(APPEND EXTRA_LIBS "-framework CoreGraphics")
   endif()
   if(SDL_FRAMEWORK_COREMOTION)
-    find_library(COREMOTION CoreMotion)
-    list(APPEND EXTRA_LIBS ${COREMOTION})
+    list(APPEND EXTRA_LIBS "-framework CoreMotion")
   endif()
   if(SDL_FRAMEWORK_FOUNDATION)
-    find_library(FOUNDATION Foundation)
-    list(APPEND EXTRA_LIBS ${FOUNDATION})
+    list(APPEND EXTRA_LIBS "-framework Foundation")
   endif()
   if(SDL_FRAMEWORK_GAMECONTROLLER)
-    find_library(GAMECONTROLLER GameController)
-    list(APPEND EXTRA_LIBS ${GAMECONTROLLER})
+    list(APPEND EXTRA_LIBS "-framework GameController")
   endif()
   if(SDL_FRAMEWORK_METAL)
     if(IOS OR TVOS)
-      find_library(METAL Metal)
-      list(APPEND EXTRA_LIBS ${METAL})
+        list(APPEND EXTRA_LIBS "-framework Metal")
     else()
       list(APPEND EXTRA_LDFLAGS "-Wl,-weak_framework,Metal")
     endif()
   endif()
   if(SDL_FRAMEWORK_OPENGLES)
-    find_library(OPENGLES OpenGLES)
-    list(APPEND EXTRA_LIBS ${OPENGLES})
+    list(APPEND EXTRA_LIBS "-framework OpenGLES")
   endif()
   if(SDL_FRAMEWORK_QUARTZCORE)
     if(IOS OR TVOS)
-      find_library(QUARTZCORE QuartzCore)
-      list(APPEND EXTRA_LIBS ${QUARTZCORE})
+      list(APPEND EXTRA_LIBS "-framework QuartzCore")
     else()
       list(APPEND EXTRA_LDFLAGS "-Wl,-weak_framework,QuartzCore")
     endif()
   endif()
   if(SDL_FRAMEWORK_UIKIT)
-    find_library(UIKIT UIKit)
-    list(APPEND EXTRA_LIBS ${UIKIT})
+    list(APPEND EXTRA_LIBS "-framework UIKit")
+  endif()
+  if(SDL_FRAMEWORK_COREHAPTICS)
+    list(APPEND EXTRA_LIBS "-framework CoreHaptics")
   endif()
 
   CheckPTHREAD()
