Add support for MetalANGLE on UIKit (OpenGL ES to Metal API translation layer)

--- a/include/SDL_config.h.in
+++ b/include/SDL_config.h.in
@@ -424,6 +424,9 @@
 /* Enable Metal support */
 #undef SDL_VIDEO_METAL
 
+/* Enable MetalANGLE support */
+#undef SDL_VIDEO_METALANGLE
+
 /* Enable system power support */
 #undef SDL_POWER_LINUX
 #undef SDL_POWER_WINDOWS
