revert the previous -Wc,-static-libgcc patch:
Someone reported breakage with that:
https://github.com/libsdl-org/SDL/commit/bc51de2f87194e45eec94414bc248a6e7a0f9d26#commitcomment-52550755

--- a/configure.ac
+++ b/configure.ac
@@ -3870,7 +3870,7 @@ case "$host" in
         else
             LIBUUID=-luuid
         fi
-        EXTRA_LDFLAGS="$EXTRA_LDFLAGS -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lsetupapi -lversion $LIBUUID -Wc,-static-libgcc"
+        EXTRA_LDFLAGS="$EXTRA_LDFLAGS -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lsetupapi -lversion $LIBUUID -static-libgcc"
         # The Windows platform requires special setup
         VERSION_SOURCES="$srcdir/src/main/windows/*.rc"
         SDLMAIN_SOURCES="$srcdir/src/main/windows/*.c"
